--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 			crossorigin="anonymous"
 		/>
 
-		<title>Hello, world!</title>
+		<title>Similar animal faces!</title>
 		<link rel="stylesheet" href="style.css" />
 		<!-- Go to www.addthis.com/dashboard to customize your tools -->
 		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5f77e1d88806217f"></script>
-
+		<link rel="icon" href="favicon.ico" type="image/x-icon" />
+		
 
 	</head>
 	<body>
